--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -24,6 +24,7 @@ jobs:
       - name: create release
         run: |-
           TAG=$(autotag)
+          git tag "$TAG"
           git push origin $TAG
           gh release create $TAG --title "$TAG" --generate-notes
         env:
