--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,7 +2,7 @@ before:
   hooks:
     - go mod tidy
 builds:
-  - binary: riq
+  - binary: isle-event-bus
     env:
       - CGO_ENABLED=0
     goos:
