--- a/ci/docker-compose.yml
+++ b/ci/docker-compose.yml
@@ -3,8 +3,8 @@ services:
       image: islandora/activemq:main@sha256:167f8ad44e0489be36b912d33f0eab7a2ee87ab137385c85a48f8bc1cc02e222
       ports:
         - "8161:8161"
-    riq:
-      image: libops/riq:main
+    isle-event-bus:
+      image: libops/isle-event-bus:main
       depends_on:
         activemq:
           condition: service_healthy
@@ -19,5 +19,5 @@ services:
         - ./test.sh:/test.sh
         - ./fixtures:/tmp:r
       depends_on:
-        riq:
+        isle-event-bus:
           condition: service_started
